src/CSS/generated/CSSParser.cpp

// Generated from CSS.g4 by ANTLR 4.13.2


#include "CSSListener.h"

#include "CSSParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CSSParserStaticData final {
  CSSParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CSSParserStaticData(const CSSParserStaticData&) = delete;
  CSSParserStaticData(CSSParserStaticData&&) = delete;
  CSSParserStaticData& operator=(const CSSParserStaticData&) = delete;
  CSSParserStaticData& operator=(CSSParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cssParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CSSParserStaticData> cssParserStaticData = nullptr;

void cssParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cssParserStaticData != nullptr) {
    return;
  }
#else
  assert(cssParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CSSParserStaticData>(
    std::vector<std::string>{
      "stylesheet", "charset", "imports", "namespace", "mediaList", "medium", 
      "cssRule", "atRule", "block", "selector", "simpleSelector", "elementName", 
      "class_", "attrib", "pseudo", "combinator", "declaration", "property", 
      "prio", "expr", "term", "unaryOperator", "operator", "hexcolor", "any"
    },
    std::vector<std::string>{
      "", "';'", "','", "'{'", "'}'", "'*'", "'.'", "'['", "'='", "']'", 
      "':'", "')'", "'-'", "'/'", "'('", "'@charset'", "'@import'", "'@namespace'", 
      "", "'!important'", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "'~='", "'|='", "'^='", "'$='", "'*='", "", "", "'+'", "'>'", 
      "'~'", "", "", "'<!--'", "'-->'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "CHARSET_SYM", 
      "IMPORT_SYM", "NAMESPACE_SYM", "AT_KEYWORD", "IMPORTANT_SYM", "STRING", 
      "IDENT", "NUMBER", "PERCENTAGE", "LENGTH", "EMS", "EXS", "ANGLE", 
      "TIME", "FREQ", "DIMENSION", "URI", "HASH", "UNICODE_RANGE", "INCLUDES", 
      "DASHMATCH", "PREFIXMATCH", "SUFFIXMATCH", "SUBSTRINGMATCH", "FUNCTION", 
      "DELIM", "PLUS", "GREATER", "TILDE", "S", "COMMENT", "CDO", "CDC", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cssParserStaticData = std::move(staticData);
}

}

CSSParser::CSSParser(TokenStream *input) : CSSParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CSSParser::CSSParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CSSParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cssParserStaticData->atn, cssParserStaticData->decisionToDFA, cssParserStaticData->sharedContextCache, options);
}

CSSParser::~CSSParser() {
  delete _interpreter;
}

const atn::ATN& CSSParser::getATN() const {
  return *cssParserStaticData->atn;
}

std::string CSSParser::getGrammarFileName() const {
  return "CSS.g4";
}

const std::vector<std::string>& CSSParser::getRuleNames() const {
  return cssParserStaticData->ruleNames;
}

const dfa::Vocabulary& CSSParser::getVocabulary() const {
  return cssParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CSSParser::getSerializedATN() const {
  return cssParserStaticData->serializedATN;
}


//----------------- StylesheetContext ------------------------------------------------------------------

CSSParser::StylesheetContext::StylesheetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::StylesheetContext::EOF() {
  return getToken(CSSParser::EOF, 0);
}

std::vector<CSSParser::CharsetContext *> CSSParser::StylesheetContext::charset() {
  return getRuleContexts<CSSParser::CharsetContext>();
}

CSSParser::CharsetContext* CSSParser::StylesheetContext::charset(size_t i) {
  return getRuleContext<CSSParser::CharsetContext>(i);
}

std::vector<CSSParser::ImportsContext *> CSSParser::StylesheetContext::imports() {
  return getRuleContexts<CSSParser::ImportsContext>();
}

CSSParser::ImportsContext* CSSParser::StylesheetContext::imports(size_t i) {
  return getRuleContext<CSSParser::ImportsContext>(i);
}

std::vector<CSSParser::NamespaceContext *> CSSParser::StylesheetContext::namespace_() {
  return getRuleContexts<CSSParser::NamespaceContext>();
}

CSSParser::NamespaceContext* CSSParser::StylesheetContext::namespace_(size_t i) {
  return getRuleContext<CSSParser::NamespaceContext>(i);
}

std::vector<CSSParser::CssRuleContext *> CSSParser::StylesheetContext::cssRule() {
  return getRuleContexts<CSSParser::CssRuleContext>();
}

CSSParser::CssRuleContext* CSSParser::StylesheetContext::cssRule(size_t i) {
  return getRuleContext<CSSParser::CssRuleContext>(i);
}


size_t CSSParser::StylesheetContext::getRuleIndex() const {
  return CSSParser::RuleStylesheet;
}

void CSSParser::StylesheetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStylesheet(this);
}

void CSSParser::StylesheetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStylesheet(this);
}

CSSParser::StylesheetContext* CSSParser::stylesheet() {
  StylesheetContext *_localctx = _tracker.createInstance<StylesheetContext>(_ctx, getState());
  enterRule(_localctx, 0, CSSParser::RuleStylesheet);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4297557216) != 0)) {
      setState(54);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CSSParser::CHARSET_SYM: {
          setState(50);
          charset();
          break;
        }

        case CSSParser::IMPORT_SYM: {
          setState(51);
          imports();
          break;
        }

        case CSSParser::NAMESPACE_SYM: {
          setState(52);
          namespace_();
          break;
        }

        case CSSParser::T__4:
        case CSSParser::T__5:
        case CSSParser::T__6:
        case CSSParser::T__9:
        case CSSParser::AT_KEYWORD:
        case CSSParser::IDENT:
        case CSSParser::HASH: {
          setState(53);
          cssRule();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(58);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(59);
    match(CSSParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharsetContext ------------------------------------------------------------------

CSSParser::CharsetContext::CharsetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::CharsetContext::CHARSET_SYM() {
  return getToken(CSSParser::CHARSET_SYM, 0);
}

tree::TerminalNode* CSSParser::CharsetContext::STRING() {
  return getToken(CSSParser::STRING, 0);
}


size_t CSSParser::CharsetContext::getRuleIndex() const {
  return CSSParser::RuleCharset;
}

void CSSParser::CharsetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCharset(this);
}

void CSSParser::CharsetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCharset(this);
}

CSSParser::CharsetContext* CSSParser::charset() {
  CharsetContext *_localctx = _tracker.createInstance<CharsetContext>(_ctx, getState());
  enterRule(_localctx, 2, CSSParser::RuleCharset);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(CSSParser::CHARSET_SYM);
    setState(62);
    match(CSSParser::STRING);
    setState(63);
    match(CSSParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportsContext ------------------------------------------------------------------

CSSParser::ImportsContext::ImportsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::ImportsContext::IMPORT_SYM() {
  return getToken(CSSParser::IMPORT_SYM, 0);
}

tree::TerminalNode* CSSParser::ImportsContext::STRING() {
  return getToken(CSSParser::STRING, 0);
}

tree::TerminalNode* CSSParser::ImportsContext::URI() {
  return getToken(CSSParser::URI, 0);
}

CSSParser::MediaListContext* CSSParser::ImportsContext::mediaList() {
  return getRuleContext<CSSParser::MediaListContext>(0);
}


size_t CSSParser::ImportsContext::getRuleIndex() const {
  return CSSParser::RuleImports;
}

void CSSParser::ImportsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImports(this);
}

void CSSParser::ImportsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImports(this);
}

CSSParser::ImportsContext* CSSParser::imports() {
  ImportsContext *_localctx = _tracker.createInstance<ImportsContext>(_ctx, getState());
  enterRule(_localctx, 4, CSSParser::RuleImports);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(CSSParser::IMPORT_SYM);
    setState(66);
    _la = _input->LA(1);
    if (!(_la == CSSParser::STRING

    || _la == CSSParser::URI)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(68);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CSSParser::IDENT) {
      setState(67);
      mediaList();
    }
    setState(70);
    match(CSSParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NamespaceContext ------------------------------------------------------------------

CSSParser::NamespaceContext::NamespaceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::NamespaceContext::NAMESPACE_SYM() {
  return getToken(CSSParser::NAMESPACE_SYM, 0);
}

tree::TerminalNode* CSSParser::NamespaceContext::IDENT() {
  return getToken(CSSParser::IDENT, 0);
}

tree::TerminalNode* CSSParser::NamespaceContext::STRING() {
  return getToken(CSSParser::STRING, 0);
}

tree::TerminalNode* CSSParser::NamespaceContext::URI() {
  return getToken(CSSParser::URI, 0);
}


size_t CSSParser::NamespaceContext::getRuleIndex() const {
  return CSSParser::RuleNamespace;
}

void CSSParser::NamespaceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNamespace(this);
}

void CSSParser::NamespaceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNamespace(this);
}

CSSParser::NamespaceContext* CSSParser::namespace_() {
  NamespaceContext *_localctx = _tracker.createInstance<NamespaceContext>(_ctx, getState());
  enterRule(_localctx, 6, CSSParser::RuleNamespace);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(CSSParser::NAMESPACE_SYM);
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2150629376) != 0)) {
      setState(73);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 2150629376) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(76);
    match(CSSParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MediaListContext ------------------------------------------------------------------

CSSParser::MediaListContext::MediaListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSParser::MediumContext *> CSSParser::MediaListContext::medium() {
  return getRuleContexts<CSSParser::MediumContext>();
}

CSSParser::MediumContext* CSSParser::MediaListContext::medium(size_t i) {
  return getRuleContext<CSSParser::MediumContext>(i);
}


size_t CSSParser::MediaListContext::getRuleIndex() const {
  return CSSParser::RuleMediaList;
}

void CSSParser::MediaListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMediaList(this);
}

void CSSParser::MediaListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMediaList(this);
}

CSSParser::MediaListContext* CSSParser::mediaList() {
  MediaListContext *_localctx = _tracker.createInstance<MediaListContext>(_ctx, getState());
  enterRule(_localctx, 8, CSSParser::RuleMediaList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    medium();
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSSParser::T__1) {
      setState(79);
      match(CSSParser::T__1);
      setState(80);
      medium();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MediumContext ------------------------------------------------------------------

CSSParser::MediumContext::MediumContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::MediumContext::IDENT() {
  return getToken(CSSParser::IDENT, 0);
}


size_t CSSParser::MediumContext::getRuleIndex() const {
  return CSSParser::RuleMedium;
}

void CSSParser::MediumContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMedium(this);
}

void CSSParser::MediumContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMedium(this);
}

CSSParser::MediumContext* CSSParser::medium() {
  MediumContext *_localctx = _tracker.createInstance<MediumContext>(_ctx, getState());
  enterRule(_localctx, 10, CSSParser::RuleMedium);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(CSSParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CssRuleContext ------------------------------------------------------------------

CSSParser::CssRuleContext::CssRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSParser::SelectorContext *> CSSParser::CssRuleContext::selector() {
  return getRuleContexts<CSSParser::SelectorContext>();
}

CSSParser::SelectorContext* CSSParser::CssRuleContext::selector(size_t i) {
  return getRuleContext<CSSParser::SelectorContext>(i);
}

std::vector<CSSParser::DeclarationContext *> CSSParser::CssRuleContext::declaration() {
  return getRuleContexts<CSSParser::DeclarationContext>();
}

CSSParser::DeclarationContext* CSSParser::CssRuleContext::declaration(size_t i) {
  return getRuleContext<CSSParser::DeclarationContext>(i);
}

CSSParser::AtRuleContext* CSSParser::CssRuleContext::atRule() {
  return getRuleContext<CSSParser::AtRuleContext>(0);
}


size_t CSSParser::CssRuleContext::getRuleIndex() const {
  return CSSParser::RuleCssRule;
}

void CSSParser::CssRuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCssRule(this);
}

void CSSParser::CssRuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCssRule(this);
}

CSSParser::CssRuleContext* CSSParser::cssRule() {
  CssRuleContext *_localctx = _tracker.createInstance<CssRuleContext>(_ctx, getState());
  enterRule(_localctx, 12, CSSParser::RuleCssRule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSParser::T__4:
      case CSSParser::T__5:
      case CSSParser::T__6:
      case CSSParser::T__9:
      case CSSParser::IDENT:
      case CSSParser::HASH: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        selector();
        setState(93);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == CSSParser::T__1) {
          setState(89);
          match(CSSParser::T__1);
          setState(90);
          selector();
          setState(95);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(96);
        match(CSSParser::T__2);
        setState(100);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == CSSParser::IDENT) {
          setState(97);
          declaration();
          setState(102);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(103);
        match(CSSParser::T__3);
        break;
      }

      case CSSParser::AT_KEYWORD: {
        enterOuterAlt(_localctx, 2);
        setState(105);
        atRule();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtRuleContext ------------------------------------------------------------------

CSSParser::AtRuleContext::AtRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::AtRuleContext::AT_KEYWORD() {
  return getToken(CSSParser::AT_KEYWORD, 0);
}

CSSParser::BlockContext* CSSParser::AtRuleContext::block() {
  return getRuleContext<CSSParser::BlockContext>(0);
}

std::vector<CSSParser::AnyContext *> CSSParser::AtRuleContext::any() {
  return getRuleContexts<CSSParser::AnyContext>();
}

CSSParser::AnyContext* CSSParser::AtRuleContext::any(size_t i) {
  return getRuleContext<CSSParser::AnyContext>(i);
}


size_t CSSParser::AtRuleContext::getRuleIndex() const {
  return CSSParser::RuleAtRule;
}

void CSSParser::AtRuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtRule(this);
}

void CSSParser::AtRuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtRule(this);
}

CSSParser::AtRuleContext* CSSParser::atRule() {
  AtRuleContext *_localctx = _tracker.createInstance<AtRuleContext>(_ctx, getState());
  enterRule(_localctx, 14, CSSParser::RuleAtRule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(CSSParser::AT_KEYWORD);
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2199022223488) != 0)) {
      setState(109);
      any();
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(117);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSParser::T__2: {
        setState(115);
        block();
        break;
      }

      case CSSParser::T__0: {
        setState(116);
        match(CSSParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

CSSParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSParser::AnyContext *> CSSParser::BlockContext::any() {
  return getRuleContexts<CSSParser::AnyContext>();
}

CSSParser::AnyContext* CSSParser::BlockContext::any(size_t i) {
  return getRuleContext<CSSParser::AnyContext>(i);
}

std::vector<CSSParser::BlockContext *> CSSParser::BlockContext::block() {
  return getRuleContexts<CSSParser::BlockContext>();
}

CSSParser::BlockContext* CSSParser::BlockContext::block(size_t i) {
  return getRuleContext<CSSParser::BlockContext>(i);
}

std::vector<CSSParser::AtRuleContext *> CSSParser::BlockContext::atRule() {
  return getRuleContexts<CSSParser::AtRuleContext>();
}

CSSParser::AtRuleContext* CSSParser::BlockContext::atRule(size_t i) {
  return getRuleContext<CSSParser::AtRuleContext>(i);
}


size_t CSSParser::BlockContext::getRuleIndex() const {
  return CSSParser::RuleBlock;
}

void CSSParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void CSSParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

CSSParser::BlockContext* CSSParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, CSSParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    match(CSSParser::T__2);
    setState(125);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2199022485640) != 0)) {
      setState(123);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CSSParser::T__6:
        case CSSParser::T__13:
        case CSSParser::STRING:
        case CSSParser::IDENT:
        case CSSParser::NUMBER:
        case CSSParser::PERCENTAGE:
        case CSSParser::LENGTH:
        case CSSParser::EMS:
        case CSSParser::EXS:
        case CSSParser::ANGLE:
        case CSSParser::TIME:
        case CSSParser::FREQ:
        case CSSParser::DIMENSION:
        case CSSParser::URI:
        case CSSParser::HASH:
        case CSSParser::UNICODE_RANGE:
        case CSSParser::INCLUDES:
        case CSSParser::DASHMATCH:
        case CSSParser::PREFIXMATCH:
        case CSSParser::SUFFIXMATCH:
        case CSSParser::SUBSTRINGMATCH:
        case CSSParser::FUNCTION:
        case CSSParser::DELIM: {
          setState(120);
          any();
          break;
        }

        case CSSParser::T__2: {
          setState(121);
          block();
          break;
        }

        case CSSParser::AT_KEYWORD: {
          setState(122);
          atRule();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(128);
    match(CSSParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectorContext ------------------------------------------------------------------

CSSParser::SelectorContext::SelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
